// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class Introspection Should able to override type with other type 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Function",
      "name": "method",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "info": "Readonly",
              "kind": "Override",
              "type": [Function],
            },
          ],
          "kind": "Parameter",
          "name": "dummy",
          "type": [Function],
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect array on constructor parameters 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [
        Object {
          "kind": "Array",
          "type": [Function],
        },
      ],
      "kind": "Parameter",
      "name": "empty",
      "type": Array [
        [Function],
      ],
    },
  ],
  "decorators": Array [
    Object {},
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect array on method parameter 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Function",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [
            Object {
              "kind": "Array",
              "type": [Function],
            },
          ],
          "kind": "Parameter",
          "name": "empty",
          "type": Array [
            [Function],
          ],
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect class properly 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Function",
      "name": "dummyMethod",
      "parameters": Array [],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect class with constructor parameters 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [],
      "kind": "Parameter",
      "name": "id",
      "type": undefined,
    },
    Object {
      "decorators": Array [],
      "kind": "Parameter",
      "name": "name",
      "type": undefined,
    },
  ],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect class with method parameters 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [],
      "kind": "Function",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "type": undefined,
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "type": undefined,
        },
      ],
      "returnType": undefined,
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect constructor parameters type with decorator 1`] = `
Object {
  "ctorParameters": Array [
    Object {
      "decorators": Array [],
      "kind": "Parameter",
      "name": "id",
      "type": [Function],
    },
    Object {
      "decorators": Array [],
      "kind": "Parameter",
      "name": "name",
      "type": [Function],
    },
  ],
  "decorators": Array [
    Object {},
  ],
  "kind": "Class",
  "methods": Array [],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;

exports[`Class Introspection Should inspect parameters type with method decorator 1`] = `
Object {
  "ctorParameters": Array [],
  "decorators": Array [],
  "kind": "Class",
  "methods": Array [
    Object {
      "decorators": Array [
        Object {},
      ],
      "kind": "Function",
      "name": "dummyMethod",
      "parameters": Array [
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "dummy",
          "type": [Function],
        },
        Object {
          "decorators": Array [],
          "kind": "Parameter",
          "name": "other",
          "type": [Function],
        },
      ],
      "returnType": [Function],
    },
  ],
  "name": "DummyClass",
  "properties": Array [],
  "type": [Function],
}
`;
